# experiments

./: CMakeLists.txt  README.md
CG/: README.md  cg_combined.cpp  cg_combined_float_double.cpp  cg_combined_hp_lp.cpp  cg_double.cpp  cg_float.cpp  cg_half.cpp  cg_mpfr.cpp  plotter.py
